fix: mobile input overflow

--- a/assets/scss/partials/search.scss
+++ b/assets/scss/partials/search.scss
@@ -5,6 +5,10 @@
 .search-form {
   display: flex;
 
+  input {
+    flex: 1 1 auto;
+  }
+
   button {
     flex: 0 0 auto;
     outline: none;
